Actually run tests
:|